--- a/.github/workflows/sdk_generation.yaml
+++ b/.github/workflows/sdk_generation.yaml
@@ -1,4 +1,4 @@
-name: Generate
+name: Generate Clients
 permissions:
   checks: write
   contents: write
@@ -15,10 +15,10 @@ permissions:
       set_version:
         description: optionally set a specific SDK version
         type: string
-  schedule:
-    - cron: 0 0 * * *
+        # schedule:
+        #   - cron: 0 0 * * *
 jobs:
-  generate:
+  generate_latest:
     uses: speakeasy-api/sdk-generation-action/.github/workflows/workflow-executor.yaml@v15
     with:
       force: ${{ github.event.inputs.force }}
