--- a/gusto_embedded_old/.speakeasy/gen.yaml
+++ b/gusto_embedded_old/.speakeasy/gen.yaml
@@ -1,9 +1,6 @@
 configVersion: 2.0.0
 generation:
-  devContainers:
-    enabled: true
-    schemaPath: https://raw.githubusercontent.com/api/v3/repos/Gusto/Gusto-Partner-API/contents/generated/embedded/api.v2024-04-01.embedded.yaml?ref=ar/add-speakeasy-github-action
-  sdkClassName: GustoEmbedded
+  sdkClassName: SDK
   maintainOpenAPIOrder: true
   usageSnippets:
     optionalPropertyRendering: withExample
@@ -16,7 +13,7 @@ generation:
     oAuth2ClientCredentialsEnabled: true
     oAuth2PasswordEnabled: true
 typescript:
-  version: 0.1.5
+  version: 0.1.1
   additionalDependencies:
     dependencies: {}
     devDependencies: {}
@@ -28,7 +25,6 @@ typescript:
   enableCustomCodeRegions: false
   enableReactQuery: false
   enumFormat: union
-  envVarPrefix: GUSTOEMBEDDED
   flattenGlobalSecurity: true
   flatteningOrder: parameters-first
   imports:
@@ -42,9 +38,9 @@ typescript:
   inputModelSuffix: input
   maxMethodParams: 0
   methodArguments: require-security-and-request
-  moduleFormat: commonjs
+  moduleFormat: dual
   outputModelSuffix: output
-  packageName: gusto-embedded
+  packageName: openapi
   responseFormat: flat
   templateVersion: v2
   useIndexModules: true
