--- a/gusto_embedded/.speakeasy/gen.yaml
+++ b/gusto_embedded/.speakeasy/gen.yaml
@@ -16,7 +16,7 @@ generation:
     oAuth2ClientCredentialsEnabled: true
     oAuth2PasswordEnabled: true
 typescript:
-  version: 0.1.4
+  version: 0.1.5
   additionalDependencies:
     dependencies: {}
     devDependencies: {}
@@ -44,7 +44,7 @@ typescript:
   methodArguments: require-security-and-request
   moduleFormat: commonjs
   outputModelSuffix: output
-  packageName: gusto-embedded
+  packageName: '@gusto/embedded-api'
   responseFormat: flat
   templateVersion: v2
   useIndexModules: true
