Fixes publishing job
- when there are multiple targets present, we must define a publish
  config for each one. Otherwise, the Publishing Github Action fails to
  trigger

--- a/.speakeasy/workflow.yaml
+++ b/.speakeasy/workflow.yaml
@@ -35,6 +35,11 @@ targets:
         target: typescript
         source: GustoEmbedded-local
         output: ./gusto_embedded
+        # Maybe a bug in speakeay's tool, but the publishing GH action
+        # doesn't work unless all targets have a configured publish section.
+        publish:
+            npm:
+                token: ''
         codeSamples:
             registry:
                 location: registry.speakeasyapi.dev/gusto/ruby-sdk/gusto-embedded-oas-typescript-code-samples
