replace local overlay file with remote one

--- a/.speakeasy/workflow.yaml
+++ b/.speakeasy/workflow.yaml
@@ -7,16 +7,11 @@ sources:
               authHeader: Authorization
               authSecret: $openapi_doc_auth_token
         overlays:
-            - location: gusto_embedded/.speakeasy/speakeasy-modifications-overlay.yaml
+            - location: https://raw.githubusercontent.com/Gusto/Gusto-Partner-API/refs/heads/main/.speakeasy/speakeasy-modifications-overlay.yaml
+              authHeader: Authorization
+              authSecret: $openapi_doc_auth_token
         registry:
             location: registry.speakeasyapi.dev/gusto/ruby-sdk/gusto-embedded-oas
-    GustoEmbedded-local:
-        inputs:
-            - location: ../Gusto-Partner-API/generated/embedded/api.v2024-04-01.embedded.yaml
-        overlays:
-            - location: gusto_embedded/.speakeasy/speakeasy-modifications-overlay.yaml
-        registry:
-            location: registry.speakeasyapi.dev/gusto/ruby-sdk/gusto-embedded-local
 targets:
     gusto-embedded:
         target: typescript
@@ -30,19 +25,3 @@ targets:
                 location: registry.speakeasyapi.dev/gusto/ruby-sdk/gusto-embedded-oas-typescript-code-samples
             labelOverride:
                 fixedValue: Typescript (SDK)
-            blocking: false
-            # local:
-            #     target: typescript
-            #     source: GustoEmbedded-local
-            #     output: ./gusto_embedded
-            #     # Maybe a bug in speakeay's tool, but the publishing GH action
-            #     # doesn't work unless all targets have a configured publish section.
-            #     publish:
-            #         npm:
-            #             token: ''
-            #     codeSamples:
-            #         registry:
-            #             location: registry.speakeasyapi.dev/gusto/ruby-sdk/gusto-embedded-oas-typescript-code-samples
-            #         labelOverride:
-            #             fixedValue: Typescript (SDK)
-            #         blocking: false
