--- a/gusto_embedded/.speakeasy/gen.yaml
+++ b/gusto_embedded/.speakeasy/gen.yaml
@@ -46,6 +46,6 @@ typescript:
   moduleFormat: commonjs
   outputModelSuffix: output
   packageName: '@gusto/embedded-api'
-  responseFormat: flat
+  responseFormat: envelope
   templateVersion: v2
   useIndexModules: true
