break a different way

--- a/gusto_embedded/.speakeasy/gen.yaml
+++ b/gusto_embedded/.speakeasy/gen.yaml
@@ -1,4 +1,4 @@
-configVersion: 2.0.0
+configVersion: kjklj
 generation:
   devContainers:
     enabled: true
@@ -25,6 +25,7 @@ generation:
     generateNewTests: false
     skipResponseBodyAssertions: false
 typescript:
+  version: 0.7.1
   additionalDependencies:
     dependencies: {}
     devDependencies: {}
