comment out workflow local file

--- a/.speakeasy/workflow.local.yaml
+++ b/.speakeasy/workflow.local.yaml
@@ -1,19 +1,19 @@
-sources:
-  GustoEmbedded-local:
-    inputs:
-      - location: ../Gusto-Partner-API/generated/embedded/api.v2025-06-15.embedded.yaml
-    overlays:
-      - location: ../Gusto-Partner-API/.speakeasy/speakeasy-modifications-overlay.yaml
-    registry:
-      location: registry.speakeasyapi.dev/gusto/ruby-sdk/gusto-embedded-local
-targets:
-  local:
-    target: typescript
-    source: GustoEmbedded-local
-    output: ./gusto_embedded
-    codeSamples:
-      registry:
-        location: registry.speakeasyapi.dev/gusto/ruby-sdk/gusto-embedded-local-typescript-code-samples
-      labelOverride:
-        fixedValue: Typescript (SDK)
-      blocking: false
+# sources:
+#   GustoEmbedded-local:
+#     inputs:
+#       - location: ../Gusto-Partner-API/generated/embedded/api.v2025-06-15.embedded.yaml
+#     overlays:
+#       - location: ../Gusto-Partner-API/.speakeasy/speakeasy-modifications-overlay.yaml
+#     registry:
+#       location: registry.speakeasyapi.dev/gusto/ruby-sdk/gusto-embedded-local
+# targets:
+#   local:
+#     target: typescript
+#     source: GustoEmbedded-local
+#     output: ./gusto_embedded
+#     codeSamples:
+#       registry:
+#         location: registry.speakeasyapi.dev/gusto/ruby-sdk/gusto-embedded-local-typescript-code-samples
+#       labelOverride:
+#         fixedValue: Typescript (SDK)
+#       blocking: false
